--- a/.github/workflows/autocommit.yml
+++ b/.github/workflows/autocommit.yml
@@ -4,6 +4,9 @@ on:
   push:
     branches:
       - master
+      
+  schedule:
+      - cron: "* * 5 * *" 
    
 jobs:
   build:
@@ -15,7 +18,7 @@ jobs:
       matrix:
         go: [1.1, 1.2, 1.3, 1.4,]
         flag: [A, B, C, D, E, F, G, H, I, J, K, L, M, N]
-    timeout-minutes: 60
+    timeout-minutes: 360
     env:
         NUM_JOBS: 256
         JOB: ${{ matrix.go }}
